get de artesano, categorias y tienda sin parametro
